# guin_e_bot

./: README.md
extras/: clear_socket.py  find_my_ip.py
src/guin_e_turtle/: CMakeLists.txt  package.xml  setup.py
src/guin_e_turtle/arduino/GuiN-E_NMCU_V_1_0_0/: GuiN-E_NMCU_V_1_0_0.ino
src/guin_e_turtle/arduino/GuiN-E_UNO_V_1_0_0/: GuiN-E_UNO_V_1_0_0.ino
src/guin_e_turtle/arduino/libraries/: Download_Library_link
src/guin_e_turtle/launch/: guin_e_turtle.launch  turtlesim.launch
src/guin_e_turtle/nodes/: rosserial_python.py  turtle_translator.py
src/guin_e_turtle/src/guin_e_turtle/: SerialClient.py  __init__.py
